--- a/gtk-3.0/gtk.scss
+++ b/gtk-3.0/gtk.scss
@@ -12,4 +12,4 @@ $darker: 'true'; // For a darker headerbar
 @import 'drawing';
 @import 'common';
 @import 'colors-public';
-@import 'other';
+@import 'apps';
