--- a/gtk-3.0/gtk-dark.css
+++ b/gtk-3.0/gtk-dark.css
@@ -1685,6 +1685,8 @@ XfceHeading, .XfceHeading { margin: 0; padding: 0; border-width: 0; background-i
 
 .nautilus-window .searchbar-container { margin-top: -1px; }
 
+.nautilus-window .linked.path-bar .dim-label, .nautilus-window .linked.path-bar label.separator, .nautilus-window .linked.path-bar .titlebar:not(headerbar) .subtitle, .titlebar:not(headerbar) .nautilus-window .linked.path-bar .subtitle, .nautilus-window .linked.path-bar headerbar .subtitle, headerbar .nautilus-window .linked.path-bar .subtitle { color: transparent; }
+
 .disk-space-display { border-style: solid; border-width: 2px; }
 
 .disk-space-display.unknown { background-color: #0f0f0f; border-color: black; }
